# tinyurl

./: Cargo.toml  Dioxus.toml  Dockerfile  README.md  caddy.json  db.json  db_example.json  docker-compose.yml
src/: main.rs
src/data/: caddy.rs  mod.rs
